:lipstick: fix dimensions so page does not overflow

--- a/src/styles/layouts/_base.scss
+++ b/src/styles/layouts/_base.scss
@@ -4,8 +4,19 @@
   padding: 0;
 }
 
+html,
+body,
+#app {
+  width: 100%;
+  overflow-x: hidden;
+}
+
 body {
   background-color: $backgroundPrimary;
   font-family: $fontSegoe;
   color: $colorPrimary;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
